added tmux keymap to load RoR Testing Layout

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,9 @@ set -g mouse-select-pane on
 unbind-key C-b
 set -g prefix C-a
 
+# map Ctrl-r to load RoR Testing Layout
+bind r source-file ~/.tmux/RoRTestingLayout
+
 # style
 
 set-option -g status-fg yellow
